--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
 body {
   margin: 0;
+  background-color: #1f2a37;
+}
+
+#info-container {
+  margin: 100px 0 50px 100px;
+  font-family: "Karla", sans-serif;
+  color: #fcfbf9;
+}
+
+#title-text {
+  font-weight: 800;
+  font-size: 40px;
+  margin: 0 0 20px 0;
+  line-height: 35px;
+}
+
+#slogan-text {
+  font-weight: 200;
+  margin: 0 0 0 0;
+}
+
+#text-highlight {
+  color: #4ede87;
 }
