--- a/src/index.css
+++ b/src/index.css
@@ -40,8 +40,11 @@ body {
 .generated-password {
   background-color: #263549;
   width: 40%;
-  padding: 10px;
   border-radius: 10px;
+  color: #12bd85;
+  font-family: "Karla", sans-serif;
+  text-align: center;
+  font-weight: bold;
 }
 
 .input-btn {
