--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,52 @@ body {
   color: #fcfbf9;
 }
 
-#input-container, #result-container {
+#input-container {
+  margin: 40px 0 40px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 600px;
+}
+
+#result-container {
   margin: 40px 0 40px 100px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 600px;
-  
+}
+
+#options-container {
+  margin: 40px 0 40px -120px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 600px;
+}
+
+
+#flex-container {
+  display: flex;
+  align-items: start;
+}
+
+#advanced-options {
+  border: 2px solid #12bd85;
+  padding: 10px 20px 30px 30px;
+  margin: 30px 0 0 0;
+  width: 60%;
+  height: 50%;
+}
+
+#include-heading {
+  font-family: "Karla", sans-serif;
+  color: #fcfbf9;
+}
+
+#length-heading {
+  font-family: "Karla", sans-serif;
+  color: #fcfbf9;
 }
 
 #title-text {
@@ -37,6 +76,11 @@ body {
   color: #4ede87;
 }
 
+.checkbox {
+  font-family: "Karla", sans-serif;
+  color: #4ede87;
+}
+
 .generated-password {
   background-color: #263549;
   width: 40%;
@@ -45,7 +89,7 @@ body {
   font-family: "Karla", sans-serif;
   text-align: center;
   font-weight: bold;
-   min-height: 40px;
+  min-height: 50px;
 }
 
 .generated-password:hover {
@@ -62,6 +106,7 @@ body {
   font-size: 15px;
   font-weight: bold;
 }
+
 .input-btn:hover {
   background-color: #0e8e64;
   cursor: pointer;
@@ -95,4 +140,73 @@ body {
 
 .tooltip:hover .tooltip-text {
   visibility: visible;
+}
+
+.label-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin: 2px 0 10px 0;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: "Karla", sans-serif;
+  color: #12bd85;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #12bd85;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid #fcfbf9;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
