--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ body {
   margin: 30px 0 0 0;
   width: 60%;
   height: 50%;
+  max-width: 500px;
 }
 
 #include-heading {
@@ -181,7 +182,6 @@ body {
   background-color: #ccc;
 }
 
-/* When the checkbox is checked, add a blue background */
 .container input:checked ~ .checkmark {
   background-color: #12bd85;
 }
@@ -209,4 +209,21 @@ body {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+
+#plus-minus-container {
+  margin-top: -15px;
+  display: flex;
+  justify-content: space-around;
+  max-width: 200px;
+  color: #12bd85;
+  font-family: "Karla", sans-serif;
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.plus-minus-btn {
+  padding: 10px 15px 10px 15px;
+  margin: auto 0 auto 0;
+  font-size: 22px;
 }
