--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
 }
 
 #result-container {
-  margin: 40px 0 40px 100px;
+  margin: 85px 0 0 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
